--- a/operations/AddRoomWindow.axaml
+++ b/operations/AddRoomWindow.axaml
@@ -1,6 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        x:Class="SmartHouse.SecondWindow"
+        x:Class="SmartHouse.AddWindow"
         Title="Second Window"
         Width="400"
         Height="300">
